# rasterization

./: Cargo.toml  README.md
examples/: example_circle.rs  example_circle_long.rs  example_gradient.rs  example_semicircle_bottom.rs  example_semicircle_top.rs
src/: lib.rs
tests/: test_semicircle.rs
